<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/main_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton 
            android:id="@+id/main_tv_tab_credit"
            style="@style/MainTitleStyle" 
            android:text="@string/tab_credit" />

        <RadioButton 
            android:id="@+id/main_tv_tab_profession"
            style="@style/MainTitleStyle"
            android:text="@string/tab_profession" />

        <RadioButton 
            android:id="@+id/main_tv_tab_price"
            style="@style/MainTitleStyle"
            android:text="@string/tab_price" />

        <RadioButton 
            android:id="@+id/main_tv_tab_distance"
            style="@style/MainTitleStyle"
            android:text="@string/tab_distance" />
    </RadioGroup>
	
    <View style="@style/DivideLineStyle" />
	
    <com.handmark.pulltorefresh.library.PullToRefreshListView 
        xmlns:ptr="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="@color/transparent"
        android:fadingEdge="none"
        android:fastScrollEnabled="false"
        android:scrollbars="none"
        android:smoothScrollbar="false"
        android:dividerHeight="1.0dp"
        ptr:ptrShowIndicator="false"
        ptr:ptrScrollingWhileRefreshingEnabled="true" />

</LinearLayout>