<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <View
            android:layout_marginTop="16dp" 
            style="@style/DivideLineStyle" />
        

        <TextView 
            android:id="@+id/setting_tv_upgrade_version"
            style="@style/TextSettingStyle"
            android:drawableLeft="@drawable/ico_setting_upgrade"
            android:drawablePadding="16dp"
            android:text="@string/setting_upgrade" />

        <View style="@style/DivideLineStyle"/>
        
        <TextView 
            android:id="@+id/setting_tv_user_level"
            style="@style/TextSettingStyle"
            android:drawableLeft="@drawable/ico_setting_user_level"
            android:drawableRight="@drawable/arrow_right"
            android:drawablePadding="16dp"
            android:text="@string/setting_user_level" />

        <View style="@style/DivideLineStyle"/>

        <TextView 
            android:id="@+id/setting_tv_friend_category"
            style="@style/TextSettingStyle"
            android:drawableLeft="@drawable/ico_setting_friend_category"
            android:drawableRight="@drawable/arrow_right"
            android:drawablePadding="16dp"
            android:text="@string/setting_friend_category" />

        <View style="@style/DivideLineStyle"/>
        <!-- 
        <TextView 
            android:id="@+id/setting_tv_update_safecode"
            style="@style/TextSettingStyle"
            android:drawableLeft="@drawable/ico_setting_safe_code"
            android:drawableRight="@drawable/arrow_right"
            android:drawablePadding="16dp"
            android:text="@string/setting_safe_code" />
        <View style="@style/DivideLineStyle"/>
        -->
        
        <TextView
            android:id="@+id/setting_tv_update_password"
            style="@style/TextSettingStyle"
            android:drawableLeft="@drawable/ico_setting_pwd"
            android:drawablePadding="16dp"
            android:drawableRight="@drawable/arrow_right"
            android:text="@string/setting_update_password" />

        <View style="@style/DivideLineStyle"/>
        
        <TextView 
            android:id="@+id/setting_tv_update_email"
            style="@style/TextSettingStyle"
            android:drawableLeft="@drawable/ico_setting_email"
            android:drawablePadding="16dp"
            android:drawableRight="@drawable/arrow_right"
            android:text="@string/setting_update_email" />

        <View style="@style/DivideLineStyle"/>
        
        <TextView 
            android:id="@+id/logout" 
            style="@style/TextSettingStyle"
            android:drawableLeft="@drawable/ico_setting_logout"
            android:drawablePadding="16dp"
            android:text="@string/setting_logout" />

        <View style="@style/DivideLineStyle"/>
        
    </LinearLayout>

</ScrollView>